--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Maymoonah.github.io/react-weather-app",
+  "homepage": "https://maymoonah.github.io/react-weather-app/",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
